@@ -1,3 +1,8 @@
+2011-02-15  Mark Grondona <mgrondona@llnl.gov>
+
+	* tests/t0006-pdcp.sh :
+	  Add sanity checks for pdcp/rpdcp functionality.
+
 2011-02-14  Mark Grondona <mgrondona@llnl.gov>
 
 	* tests/t0006-pdcp.sh :
